<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkGray"
    android:onClick="eventToClick"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.martialartsevent.MainActivity" >

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginRight="30dp"
        android:text="@string/home"
        tools:ignore="RtlHardcoded" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/mainMenuTitle"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="33dp"
        android:contentDescription="@string/yin_yang"
        android:src="@drawable/yinandyang"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/mainMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/karate_description"
        android:textColor="@color/Chartreuse"
        android:textColorHint="@color/Chartreuse"
        android:textSize="@dimen/bigger_font" />

    <RadioGroup
        android:id="@+id/colours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mainMenuTitle"
        android:layout_alignLeft="@+id/imageView1"
        android:layout_marginBottom="14dp"
        android:onClick="eventToClick"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded" >

        <RadioButton
            android:id="@+id/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="eventToClick"
            android:text="@string/theme_colour_blue" />

        <RadioButton
            android:id="@+id/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="eventToClick"
            android:text="@string/theme_colour_red" />

        <RadioButton
            android:id="@+id/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:onClick="eventToClick"
            android:text="@string/them_color_white" />

    </RadioGroup>

</RelativeLayout>