<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkGray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.martialartsevent.EventActivity" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/event_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Chartreuse"
        android:textSize="@dimen/title" />

    <ImageButton
        android:id="@+id/websitelink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:onClick="onClick"
        android:src="@drawable/karatelogo" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView1"
        android:layout_marginBottom="23dp"
        android:text="@string/home" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/event_description"
        android:textColor="@color/Chartreuse" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/websitelink"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@+id/websitelink"
        android:text="@string/link_website"
        android:textColor="@color/Chartreuse" />

    <SurfaceView
        android:id="@+id/surfaceView1"
        android:layout_width="130dp"
        android:layout_height="120dp"
        android:layout_alignLeft="@+id/websitelink"
        android:layout_below="@+id/websitelink"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="27dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/surfaceView1"
        android:layout_marginLeft="44dp"
        android:layout_toRightOf="@+id/surfaceView1"
        android:text="@string/event_when"
        android:textColor="@color/Cyan"
        android:textSize="@dimen/bigger_font" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="40dp"
        android:text="@string/event_where"
        android:textColor="@color/Cyan"
        android:textSize="@dimen/bigger_font" />

</RelativeLayout>
