<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkGray"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.martialartsevent.AboutClubActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="220dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="22dp"
        android:src="@drawable/karateclub" />

    <Button
        android:id="@+id/homeButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@+id/imageView1"
        android:text="@string/home" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/homeButton"
        android:layout_alignTop="@+id/textView1"
        android:layout_marginTop="141dp"
        android:src="@drawable/daz" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/homeButton"
        android:layout_alignRight="@+id/imageView1"
        android:layout_marginBottom="100dp"
        android:text="@string/club_description"
        android:textColor="@color/Chartreuse"
        android:textSize="@dimen/clubdes" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/about_club"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/Chartreuse"
        android:textSize="@dimen/title" />

</RelativeLayout>
